# mach

./: .gitignore  README.md  bodega-simple.toml  bodega.toml  go.mod  install.sh  run_tests.sh
bodega/: LICENSE  README.md  pyproject.toml  setup.py
bodega/bodega_deploy/: __init__.py  cli.py  mach_client.py
examples/: README.md  bodega-full.toml  bodega-redirect.toml  bodega-static.toml
mach/: README.md  build.sh  go.mod  main.go
