[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bodega-deploy"
version = "0.1.0"
description = "The simplest way to deploy anything"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Bodega Team", email = "team@bodega.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "rich>=13.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
bodega = "bodega_deploy.cli:main"

[project.urls]
Homepage = "https://github.com/SRSWTI/mach"
Repository = "https://github.com/SRSWTI/mach"
Issues = "https://github.com/SRSWTI/mach/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bodega_deploy*"]

[tool.setuptools.package-data]
bodega_deploy = ["bin/*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
